--- a/views/store.html
+++ b/views/store.html
@@ -333,7 +333,7 @@
                     </fieldset>
                     <fieldset>
                         <label for="nameOnCard">
-                            <input type="text" id="nameOnCard"inputmode="text" pattern="[A-Za-z]+" name="cardholderName" minlength="3" maxlength="10" placeholder="Name on card" required/                              >
+                            <input type="text" id="nameOnCard" inputmode="text" pattern="[A-Za-z]+" name="cardholderName" minlength="3" maxlength="10" placeholder="Name on card" required/                              >
                         </label>
                     </fieldset>
                     <fieldset>
@@ -341,7 +341,7 @@
                             <input type="month" id="expirateDate" name="date" required/>
                         </label>
                     </fieldset>
-                    <button href="#" class="btnPlaceOnOrder">Place on order</button>
+                    <button class="btnPlaceOnOrder" type="button">Place on order</button>
                 </fieldset>
             </form>
         </section>
