--- a/views/store.html
+++ b/views/store.html
@@ -341,7 +341,7 @@
                             <input type="month" id="expirateDate" name="date" required/>
                         </label>
                     </fieldset>
-                    <button class="btnPlaceOnOrder" type="button">Place on order</button>
+                    <button class="btnPlaceOnOrder" type="submit">Place on order</button>
                 </fieldset>
             </form>
         </section>
