--- a/views/sign_In_&_Create_Account.html
+++ b/views/sign_In_&_Create_Account.html
@@ -241,8 +241,8 @@
                     </label>
                     <legend>Welcome back</legend>
                     <fieldset class="formFloating">
-                        <label class="email" for="floatingInput">Email</label>
-                        <input type="email" class="formControl input" id="floatingInput" placeholder="Enter your mail" required/>
+                        <label class="email" for="floatingEmail">Email</label>
+                        <input type="email" class="formControl input" id="floatingEmail" placeholder="Enter your mail" required/>
                     </fieldset>
                     <fieldset class="formFloating">
                         <label class="password" for="floatingPassword">Password</label>
@@ -266,16 +266,16 @@
                     </label>
                     <legend>Create Account</legend>
                     <fieldset class="formFloating">
-                        <label class="firstName" for="floatingInput">First name</label>
-                        <input type="text" class="formControl input" id="floatingInput" name="firstName" pattern="[A-Za-z]+" minlength="3"  maxlength="10" placeholder="Enter your first name" required>
+                        <label class="firstName" for="floatingFirstName">First name</label>
+                        <input type="text" class="formControl input" id="floatingFirstName" name="firstName" pattern="[A-Za-z]+" minlength="3"  maxlength="10" placeholder="Enter your first name" required>
                     </fieldset>
                     <fieldset class="formFloating">
-                        <label class="lastName" for="floatingInput">Last name</label>
-                        <input type="text" class="formControl input" id="floatingInput" name="firstName" pattern="[A-Za-z]+" minlength="3"  maxlength="10" placeholder="Enter your last name" required>
+                        <label class="lastName" for="floatingLastName">Last name</label>
+                        <input type="text" class="formControl input" id="floatingLastName" name="firstName" pattern="[A-Za-z]+" minlength="3"  maxlength="10" placeholder="Enter your last name" required>
                     </fieldset>
                     <fieldset class="formFloating">
-                        <label class="email" for="floatingInput">Email address</label>
-                        <input type="email" class="formControl input" id="floatingInput" placeholder="Enter your Email" required>
+                        <label class="email" for="floatingEmail">Email address</label>
+                        <input type="email" class="formControl input" id="floatingEmail" placeholder="Enter your Email" required>
                     </fieldset>
                     <fieldset class="formFloating">
                         <label class="password"for="floatingPassword">Password</label>
